--- a/kubernetes/manifests-yamls/deployment.yaml
+++ b/kubernetes/manifests-yamls/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: sample-tomcat-application
-          image: kishanth1994/springapp:{DOCKER_TAG}
+          image: saranvemireddy/springapp:{DOCKER_TAG}
           command: ["/bin/sh"]
           args: ["-c","sh /usr/local/tomcat/bin/startup.sh;while true; do echo hello; sleep 10;done"]
           imagePullPolicy: Always
